Added express and body parser

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/suhaibaffan/dupont-sop/issues"
   },
-  "homepage": "https://github.com/suhaibaffan/dupont-sop#readme"
+  "homepage": "https://github.com/suhaibaffan/dupont-sop#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3"
+  }
 }
